--- a/html/cadastroparceiro.html
+++ b/html/cadastroparceiro.html
@@ -93,185 +93,116 @@
 
   </div>
 </header>
-<body class="bg-light">
+<div class="py-5 text-center">
+  <h2>Cadastro do Parceiro</h2>
+  <button class="btn btn-primary btn-lg" data-bs-toggle="modal" data-bs-target="#JanelaModal" type="submit">
+    Cadastrar
+</button>
+</div>
 
   <div class="container">
     <main>
-      <div class="py-5 text-center">
-        <h2>Cadastro do Parceiro</h2>
+      <div id = "JanelaModal" class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-lg">
+            <div class="modal-content">
+
+                <div class="modal-header">
+                    <h3 class="modal-title">Cadastro do Parceiro</h3>
+                    <button type="button" class="btn btn-close" data-bs-dismiss="modal"></button>
+                </div>
+                <div class="modal-body">
+                        <form class="needs-validation" novalidate>
+                            <div class="form-group">
+                              <h4 class="mb-1">Informações do parceiro</h4>
+                              <label for="nomeParceiro" class="form-label">Nome</label>
+                              <input type="text" class="form-control" id="nomeParceiro" placeholder="Digite o seu nome" value=""
+                                required>
+                              </div>
+                              <div class="form-group">
+                                <label for="cnpjCpfParceiro" class="form-label">CNPJ/CPF</label>
+                                <input type="text" class="form-control" id="cnpjCpfParceiro" placeholder="Digite seu CNPJ/CPF" required>
+                              </div>
+                              <div class="form-group">
+                                <label for="telefoneParceiro" class="form-label">Telefone</label>
+                                <input type="text" class="form-control" id="telefoneParceiro" placeholder="Digite seu telefone">
+                              </div>
+                              <div class="form-group">
+                                <label for="emailParceiro" class="form-label">E-mail</label>
+                                <input type="text" class="form-control" id="emailParceiro" placeholder="Digite seu e-mail" required>
+                              </div>
+                                          <!--Colocar cadastro do endereço é obrigatorio-->
+                              <div class="form-group">
+                                <h4 class="mb-1">Serviços</h4>
+                                <div class="my-2 form-check form-check-inline">
+                                  <input class="form-check-input" type="checkbox" id="servico1" value="Hospedagem">
+                                  <label class="form-check-label" for="servico1">Hospedagem</label>
+                                </div>
+                                <div class="form-check form-check-inline">
+                                  <input class="form-check-input" type="checkbox" id="servico2" value="Creche">
+                                  <label class="form-check-label" for="servico2">Creche</label>
+                                </div>
+                                <div class="form-check form-check-inline">
+                                  <input class="form-check-input" type="checkbox" id="servico3" value="Pet sitter">
+                                  <label class="form-check-label" for="servico3">Pet sitter</label>
+                                </div>
+                                <div class="form-check form-check-inline">
+                                  <input class="form-check-input" type="checkbox" id="servico4" value="Passeios">
+                                  <label class="form-check-label" for="servico4">Passeios</label>
+                                </div>
+                              </div>
+                              <div class="form-group">
+                                <h4 class="mb-1">Horario de Funcionamento</h4>
+                                 <!--Aqui colocar os dias da semana e horario respectivo de cada dia do funcionamento-->
+                              </div>
+                              <div class="form-group">
+                                <h4 class="mb-1">Informações do parceiro</h4>
+                                <label for="nomeProprietario" class="form-label">Nome do Proprietario</label>
+                                <input type="text" class="form-control" id="nomeProprietario" placeholder="Digite o nome do proprietario"
+                                  required>
+                              </div>
+                              <div class="form-group">
+                                <label for="cpfProprietario" class="form-label">CPF do Proprietario</label>
+                                <input type="text" class="form-control" id="cpfProprietario" placeholder="Digite CPF do proprietario"
+                                  required>
+                              </div>
+                              <div class="form-group">
+                                <h4 class="mb-1">Situação</h4>
+                                <div class="my-2">
+                                  <div class="form-check">
+                                    <input id="ativo" name="situacao" type="radio" class="form-check-input" checked required>
+                                    <label class="form-check-label" for="ativo">Ativo</label>
+                                  </div>
+                                  <div class="form-check">
+                                    <input id="inativo" name="situacao" type="radio" class="form-check-input" required>
+                                    <label class="form-check-label" for="inativo">Inativo</label>
+                                  </div>
+                                </div>
+                              </div>
+                              <div class="form-group">
+                                <label for="senhaParceiro" class="form-label">Senha</label>
+                                <input type="password" class="form-control" id="senhaParceiro" placeholder="Digite uma senha senha"
+                                  required>
+                              </div>
+                              <div class="form-group">
+                                <label for="confirmacaoSenhaParceiro" class="form-label">Digite a senha novamente</label>
+                                <input type="password" class="form-control" id="confirmacaoSenhaParceiro"
+                                  placeholder="Digite senha novamente" required>
+                              </div>
+                              <div class="form-group">
+                                <div class="my-2 form-check form-check-inline">
+                                  <input class="form-check-input" type="checkbox" id="termos" value="termos">
+                                  <label class="form-check-label" for="termos">Aceitar termos e condições</label>
+                                </div>
+                              </div>
+                        </form>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Fechar</button>
+                        <button type="button" class="btn btn-primary">Enviar</button>
+                      </div>
+            </div>
+        </div>
       </div>
-      <div class="col-md-7 col-lg-8">
-        <form class="needs-validation" novalidate>
-          <div class="row g-3  col-md-8 offset-md-5">
-            <div class="col-12 ">
-              <h4 class="mb-1">Informações do parceiro</h4>
-              <label for="nomeParceiro" class="form-label">Nome</label>
-              <input type="text" class="form-control" id="nomeParceiro" placeholder="Digite o seu nome" value=""
-                required>
-              <!--Acho que não precisa<div class="invalid-feedback">
-                Valid first name is required.
-              </div> -->
-            </div>
-
-            <!--  <div class="col-sm-6">
-              <label for="lastName" class="form-label">Last name</label>
-              <input type="text" class="form-control" id="lastName" placeholder="" value="" required>
-              <div class="invalid-feedback">
-                Valid last name is required.
-              </div>
-            </div>-->
-
-            <div class="col-12">
-              <label for="cnpjCpfParceiro" class="form-label">CNPJ/CPF</label>
-              <div class="input-group has-validation">
-                <!-- <span class="input-group-text">@</span> -->
-                <input type="text" class="form-control" id="cnpjCpfParceiro" placeholder="Digite seu CNPJ/CPF" required>
-                <!--<div class="invalid-feedback">
-                  Your username is required.
-                </div>-->
-              </div>
-            </div>
-
-            <div class="col-12">
-              <label for="telefoneParceiro" class="form-label">Telefone</label>
-              <input type="text" class="form-control" id="telefoneParceiro" placeholder="Digite seu telefone">
-              <!--<div class="invalid-feedback">
-                Please enter a valid email address for shipping updates.
-              </div>-->
-            </div>
-
-            <div class="col-12">
-              <label for="emailParceiro" class="form-label">E-mail</label>
-              <input type="text" class="form-control" id="emailParceiro" placeholder="Digite seu e-mail" required>
-              <!-- <div class="invalid-feedback">
-                Please enter your shipping address.
-              </div>-->
-            </div>
-
-            <!--Colocar cadastro do endereço é obrigatorio-->
-
-            <div class="col-md-12">
-              <h4 class="mb-1">Serviços</h4>
-              <div class="my-2 form-check form-check-inline">
-                <input class="form-check-input" type="checkbox" id="servico1" value="Hospedagem">
-                <label class="form-check-label" for="servico1">Hospedagem</label>
-              </div>
-              <div class="form-check form-check-inline">
-                <input class="form-check-input" type="checkbox" id="servico2" value="Creche">
-                <label class="form-check-label" for="servico2">Creche</label>
-              </div>
-              <div class="form-check form-check-inline">
-                <input class="form-check-input" type="checkbox" id="servico3" value="Pet sitter">
-                <label class="form-check-label" for="servico3">Pet sitter</label>
-              </div>
-              <div class="form-check form-check-inline">
-                <input class="form-check-input" type="checkbox" id="servico4" value="Passeios">
-                <label class="form-check-label" for="servico4">Passeios</label>
-              </div>
-            </div>
-
-            <h4 class="mb-1">Horario de Funcionamento</h4>
-            <!--Aqui colocar os dias da semana e horario respectivo de cada dia do funcionamento-->
-            <div class="col-12">
-              <h4 class="mb-1">Informações do parceiro</h4>
-              <label for="nomeProprietario" class="form-label">Nome do Proprietario</label>
-              <input type="text" class="form-control" id="nomeProprietario" placeholder="Digite o nome do proprietario"
-                required>
-              <!-- <div class="invalid-feedback">
-                  Please enter your shipping address.
-                </div>-->
-            </div>
-
-            <div class="col-12">
-              <label for="cpfProprietario" class="form-label">CPF do Proprietario</label>
-              <input type="text" class="form-control" id="cpfProprietario" placeholder="Digite CPF do proprietario"
-                required>
-              <!-- <div class="invalid-feedback">
-                  Please enter your shipping address.
-                </div>-->
-            </div>
-
-            <h4 class="mb-1">Situação</h4>
-
-            <div class="my-2">
-              <div class="form-check">
-                <input id="ativo" name="situacao" type="radio" class="form-check-input" checked required>
-                <label class="form-check-label" for="ativo">Ativo</label>
-              </div>
-              <div class="form-check">
-                <input id="inativo" name="situacao" type="radio" class="form-check-input" required>
-                <label class="form-check-label" for="inativo">Inativo</label>
-              </div>
-            </div>
-
-            <div class="col-12">
-              <label for="senhaParceiro" class="form-label">Senha</label>
-              <input type="password" class="form-control" id="senhaParceiro" placeholder="Digite uma senha senha"
-                required>
-            </div>
-
-            <div class="col-12">
-              <label for="confirmacaoSenhaParceiro" class="form-label">Digite a senha novamente</label>
-              <input type="password" class="form-control" id="confirmacaoSenhaParceiro"
-                placeholder="Digite senha novamente" required>
-            </div>
-
-            <div class="col-md-12">
-              <div class="my-2 form-check form-check-inline">
-                <input class="form-check-input" type="checkbox" id="termos" value="termos">
-                <label class="form-check-label" for="termos">Aceitar termos e condições</label>
-              </div>
-            </div>
-
-            <!--  <div class="col-md-5">
-              <label for="country" class="form-label">Country</label>
-              <select class="form-select" id="country" required>
-                <option value="">Choose...</option>
-                <option>United States</option>
-              </select>
-              <div class="invalid-feedback">
-                Please select a valid country.
-              </div>
-            </div>
-
-            <div class="col-md-4">
-              <label for="state" class="form-label">State</label>
-              <select class="form-select" id="state" required>
-                <option value="">Choose...</option>
-                <option>California</option>
-              </select>
-              <div class="invalid-feedback">
-                Please provide a valid state.
-              </div>
-            </div>
-
-            <div class="col-md-3">
-              <label for="zip" class="form-label">Zip</label>
-              <input type="text" class="form-control" id="zip" placeholder="" required>
-              <div class="invalid-feedback">
-                Zip code required.
-              </div>
-            </div>
-          </div>-->
-
-            <!--<hr class="my-4">
-
-          <div class="form-check">
-            <input type="checkbox" class="form-check-input" id="same-address">
-            <label class="form-check-label" for="same-address">Shipping address is the same as my billing address</label>
-          </div>
-
-          <div class="form-check">
-            <input type="checkbox" class="form-check-input" id="save-info">
-            <label class="form-check-label" for="save-info">Save this information for next time</label>
-          </div>
-
-          <hr class="my-4">-->
-
-
-
-            <button class="w-100 btn btn-primary btn-lg" type="submit">Cadastrar</button>
-        </form>
       </div>
   </div>
   </main>
