--- a/html/cadastroservico.html
+++ b/html/cadastroservico.html
@@ -78,7 +78,7 @@
             </a>
     
             <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
-              <li><a href="../html/paginainicial.html" class="nav-link px-2 link-secondary">Home</a></li>
+              <li><a href="../html/paginainicial.html" class="nav-link px-2 link-dark">Home</a></li>
               <li><a href="../html/sobrenos.html" class="nav-link px-2 link-dark">Sobre Nós</a></li>
               <li><a href="#" class="nav-link px-2 link-dark">Parceiros</a></li>
             </ul>
@@ -95,177 +95,124 @@
     
         </div>
       </header>
+      <div class="py-5 text-center">
+        <h2>Cadastro do Dono Pet</h2>
+  
+      <button class="btn btn-primary btn-lg" data-bs-toggle="modal" data-bs-target="#JanelaModal" type="submit">
+        Cadastrar
+    </button>
+  </div>
     <div class="container">
         <main>
-            <div class="py-5 text-center">
-                <h2>Cadastro do Serviço</h2>
+          <div id = "JanelaModal" class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+            <div class="modal-dialog modal-lg">
+                <div class="modal-content">
+
+                    <div class="modal-header">
+                        <h3 class="modal-title">Cadastro do Serviço</h3>
+                        <button type="button" class="btn btn-close" data-bs-dismiss="modal"></button>
+                    </div>
+
+                    <div class="modal-body">
+                            <form class="needs-validation" novalidate>
+                                <div class="form-group">
+                                  <h4 class="mb-1">Informações do serviço</h4>
+                                  <label for="nomeServico" class="form-label">Nome do serviço</label>
+                                  <input type="text" class="form-control" id="nomeServico"
+                                      placeholder="Digite o nome do serviço" value="" required>
+                                  </div>
+                                  <div class="form-group">
+                                    <p>Tipo do serviços</p>
+                                    <div class="my-1 form-check form-check-inline">
+                                      <input class="form-check-input" type="checkbox" id="servico1" value="Hospedagem">
+                                      <label class="form-check-label" for="servico1">Hospedagem</label>
+                                  </div>
+                                  <div class="form-check form-check-inline">
+                                      <input class="form-check-input" type="checkbox" id="servico2" value="Creche">
+                                      <label class="form-check-label" for="servico2">Creche</label>
+                                  </div>
+                                  <div class="form-check form-check-inline">
+                                      <input class="form-check-input" type="checkbox" id="servico3" value="Pet sitter">
+                                      <label class="form-check-label" for="servico3">Pet sister</label>
+                                  </div>
+                                  <div class="form-check form-check-inline">
+                                      <input class="form-check-input" type="checkbox" id="servico4" value="Passeios">
+                                      <label class="form-check-label" for="servico4">Passeios</label>
+                                  </div>
+                                  </div>
+                                  <div class="form-group">
+                                    <label for="descricaoServico">Descrição do Serviço</label>
+                                    <textarea class="form-control" id="descricaoServico" rows="3"></textarea>
+                                  </div>
+                                  <div class="form-group">
+                                    <label for="precoServico" class="form-label">Preço do serviço</label>
+                                    <input type="text" class="form-control" id="precoServico"
+                                        placeholder="Digite o preço do serviço" required>
+                                  </div>
+                                  <div class="form-group">
+                                    <div class="custom-file">
+                                      <p>Fotos</p>
+                                      <input type="file" class="custom-file-input" id="customFile">
+                                      <label class="custom-file-label" for="customFile"></label>
+                                  </div>
+                                  </div>
+                                  <div class="form-group">
+                                    <p>Disponibilidade do horario</p>
+                                  </div>
+                                  <div class="form-group">
+                                    <h4 class="mb-1">Informações do Pet</h4>
+                                    <p>Tipo de Pet</p>
+                                    <div class="my-1 form-check form-check-inline">
+                                        <input class="form-check-input" type="checkbox" id="tipoPet1" value="Cachorro">
+                                        <label class="form-check-label" for="tipoPet1">Cachorro</label>
+                                    </div>
+                                    <div class="form-check form-check-inline">
+                                        <input class="form-check-input" type="checkbox" id="tipoPet2" value="Creche">
+                                        <label class="form-check-label" for="tipoPet2">Gato</label>
+                                    </div>
+                                  </div>
+                                  <div class="form-group">
+                                    <p>Porte do Pet</p>
+                                    <div class="my-1 form-check form-check-inline">
+                                      <input class="form-check-input" type="checkbox" id="portePet1" value="Pequeno">
+                                      <label class="form-check-label" for="portepet1">Pequeno</label>
+                                  </div>
+                                  <div class="form-check form-check-inline">
+                                      <input class="form-check-input" type="checkbox" id="portePet2" value="Médio">
+                                      <label class="form-check-label" for="portePet2">Médio</label>
+                                  </div>
+                                  <div class="form-check form-check-inline">
+                                      <input class="form-check-input" type="checkbox" id="portePet3" value="Grande">
+                                      <label class="form-check-label" for="portePet3">Grande</label>
+                                  </div>
+                                  <div class="form-check form-check-inline">
+                                      <input class="form-check-input" type="checkbox" id="portePet4" value="Gigante">
+                                      <label class="form-check-label" for="portePet4">Gigante</label>
+                                  </div>
+                                  </div>
+                                  <div class="form-group">
+                                    <h4 class="mb-1">Situação</h4>
+                                    <div class="my-2">
+                                      <div class="form-check">
+                                          <input id="ativo" name="situacao" type="radio" class="form-check-input" checked
+                                              required>
+                                          <label class="form-check-label" for="ativo">Ativo</label>
+                                      </div>
+                                      <div class="form-check">
+                                          <input id="inativo" name="situacao" type="radio" class="form-check-input" required>
+                                          <label class="form-check-label" for="inativo">Inativo</label>
+                                      </div>
+                                  </div>
+                                  </div>
+                            </form>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Fechar</button>
+                            <button type="button" class="btn btn-primary">Enviar</button>
+                          </div>
+                </div>
             </div>
-            <div class="col-md-7 col-lg-8">
-                <form class="needs-validation" novalidate>
-                    <div class="row g-3  col-md-8 offset-md-5">
-                        <div class="col-12 ">
-                            <h4 class="mb-1">Informações do serviço</h4>
-                            <label for="nomeServico" class="form-label">Nome do serviço</label>
-                            <input type="text" class="form-control" id="nomeServico"
-                                placeholder="Digite o nome do serviço" value="" required>
-                            <!--Acho que não precisa<div class="invalid-feedback">
-                Valid first name is required.
-              </div> -->
-                        </div>
-
-                        <div class="col-md-12">
-                            <p>Tipo do serviços</p>
-                            <div class="my-1 form-check form-check-inline">
-                                <input class="form-check-input" type="checkbox" id="servico1" value="Hospedagem">
-                                <label class="form-check-label" for="servico1">Hospedagem</label>
-                            </div>
-                            <div class="form-check form-check-inline">
-                                <input class="form-check-input" type="checkbox" id="servico2" value="Creche">
-                                <label class="form-check-label" for="servico2">Creche</label>
-                            </div>
-                            <div class="form-check form-check-inline">
-                                <input class="form-check-input" type="checkbox" id="servico3" value="Pet sitter">
-                                <label class="form-check-label" for="servico3">Pet sitter</label>
-                            </div>
-                            <div class="form-check form-check-inline">
-                                <input class="form-check-input" type="checkbox" id="servico4" value="Passeios">
-                                <label class="form-check-label" for="servico4">Passeios</label>
-                            </div>
-                        </div>
-
-                        <div class="col-12">
-                            <label for="descricaoServico">Descrição do Serviço</label>
-                            <textarea class="form-control" id="descricaoServico" rows="3"></textarea>
-                            <!--<div class="invalid-feedback">
-                  Please enter a valid email address for shipping updates.
-                </div>-->
-                        </div>
-                        <!--  <div class="col-sm-6">
-              <label for="lastName" class="form-label">Last name</label>
-              <input type="text" class="form-control" id="lastName" placeholder="" value="" required>
-              <div class="invalid-feedback">
-                Valid last name is required.
-              </div>
-            </div>-->
-                        <div class="col-12">
-                            <label for="precoServico" class="form-label">Preço do serviço</label>
-                            <input type="text" class="form-control" id="precoServico"
-                                placeholder="Digite o preço do serviço" required>
-                            <!-- <div class="invalid-feedback">
-      Please enter your shipping address.
-    </div>-->
-                        </div>
-                        <div class="col-12">
-                            <div class="custom-file">
-                                <p>Fotos</p>
-                                <input type="file" class="custom-file-input" id="customFile">
-                                <label class="custom-file-label" for="customFile"></label>
-                            </div>
-                        </div>
-                        <p>Disponibilidade do horario</p>
-
-                        <h4 class="mb-1">Informações do Pet</h4>
-                        <div class="col-md-12">
-                            <p>Tipo de Pet</p>
-                            <div class="my-1 form-check form-check-inline">
-                                <input class="form-check-input" type="checkbox" id="tipoPet1" value="Cachorro">
-                                <label class="form-check-label" for="tipoPet1">Cachorro</label>
-                            </div>
-                            <div class="form-check form-check-inline">
-                                <input class="form-check-input" type="checkbox" id="tipoPet2" value="Creche">
-                                <label class="form-check-label" for="tipoPet2">Gato</label>
-                            </div>
-                        </div>
-
-                        <div class="col-md-12">
-                            <p>Porte do Pet</p>
-                            <div class="my-1 form-check form-check-inline">
-                                <input class="form-check-input" type="checkbox" id="portePet1" value="Pequeno">
-                                <label class="form-check-label" for="portepet1">Pequeno</label>
-                            </div>
-                            <div class="form-check form-check-inline">
-                                <input class="form-check-input" type="checkbox" id="portePet2" value="Médio">
-                                <label class="form-check-label" for="portePet2">Médio</label>
-                            </div>
-                            <div class="form-check form-check-inline">
-                                <input class="form-check-input" type="checkbox" id="portePet3" value="Grande">
-                                <label class="form-check-label" for="portePet3">Grande</label>
-                            </div>
-                            <div class="form-check form-check-inline">
-                                <input class="form-check-input" type="checkbox" id="portePet4" value="Gigante">
-                                <label class="form-check-label" for="portePet4">Gigante</label>
-                            </div>
-                        </div>
-
-
-
-
-                        <h4 class="mb-1">Situação</h4>
-
-                        <div class="my-2">
-                            <div class="form-check">
-                                <input id="ativo" name="situacao" type="radio" class="form-check-input" checked
-                                    required>
-                                <label class="form-check-label" for="ativo">Ativo</label>
-                            </div>
-                            <div class="form-check">
-                                <input id="inativo" name="situacao" type="radio" class="form-check-input" required>
-                                <label class="form-check-label" for="inativo">Inativo</label>
-                            </div>
-                        </div>
-
-
-
-                        <!--  <div class="col-md-5">
-              <label for="country" class="form-label">Country</label>
-              <select class="form-select" id="country" required>
-                <option value="">Choose...</option>
-                <option>United States</option>
-              </select>
-              <div class="invalid-feedback">
-                Please select a valid country.
-              </div>
-            </div>
-
-            <div class="col-md-4">
-              <label for="state" class="form-label">State</label>
-              <select class="form-select" id="state" required>
-                <option value="">Choose...</option>
-                <option>California</option>
-              </select>
-              <div class="invalid-feedback">
-                Please provide a valid state.
-              </div>
-            </div>
-
-            <div class="col-md-3">
-              <label for="zip" class="form-label">Zip</label>
-              <input type="text" class="form-control" id="zip" placeholder="" required>
-              <div class="invalid-feedback">
-                Zip code required.
-              </div>
-            </div>
-          </div>-->
-
-                        <!--<hr class="my-4">
-
-          <div class="form-check">
-            <input type="checkbox" class="form-check-input" id="same-address">
-            <label class="form-check-label" for="same-address">Shipping address is the same as my billing address</label>
           </div>
-
-          <div class="form-check">
-            <input type="checkbox" class="form-check-input" id="save-info">
-            <label class="form-check-label" for="save-info">Save this information for next time</label>
-          </div>
-
-          <hr class="my-4">-->
-
-
-
-                        <button class="w-100 btn btn-primary btn-lg" type="submit">Cadastrar</button>
-                </form>
-            </div>
     </div>
     </main>
     </div>
